--- a/foodie-egg.html
+++ b/foodie-egg.html
@@ -45,7 +45,7 @@
   </div>
   <section class="project_content is-ei-color wf-section">
     <div class="div-block-9 _9-1">
-      <a href="https://foddie-aiap.webflow.io/#about" class="link-block-12 w-inline-block"><img src="images/arrow-black.svg" loading="lazy" alt="" class="image-19"></a>
+      <a href="https://ceee-z.github.io/index.html#about" class="link-block-12 w-inline-block"><img src="images/arrow-black.svg" loading="lazy" alt="" class="image-19"></a>
       <div class="text-block-7 _7-1">Egg artifacts in AIAP</div>
     </div>
     <div class="text-block-7 text-2 t2-1">Collected allartifacts using Egg element in AIAP Historical Archive of the Graphic Project</div>
