--- a/apple/foodie-apple-01.html
+++ b/apple/foodie-apple-01.html
@@ -51,7 +51,7 @@
       </div>
     </section>
     <div class="div-block-9">
-      <a href="../paid-ad-copy.html" class="link-01 w-inline-block"><img src="../images/arrow-black.svg" loading="lazy" alt="" class="image-19"></a>
+      <a href="../foodie-apple.html" class="link-01 w-inline-block"><img src="../images/arrow-black.svg" loading="lazy" alt="" class="image-19"></a>
       <div class="text-block-7">Apple artifacts in AIAP</div>
     </div>
     <section style="-webkit-transform:translate3d(0, 16em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-moz-transform:translate3d(0, 16em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);-ms-transform:translate3d(0, 16em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0);transform:translate3d(0, 16em, 0) scale3d(1, 1, 1) rotateX(0) rotateY(0) rotateZ(0) skew(0, 0)" class="container grid project_content_section w-container">
