--- a/index.html
+++ b/index.html
@@ -156,12 +156,12 @@
   <div class="div-block-17">
     <div class="text-block-16"><strong>GROUPER PROMPTS<br><br>- years<br>- author<br>- fund</strong></div>
     <div class="text-block-16"><strong class="bold-text-24">DATASETS<br><br>- THE DATASET CREATED: <br></strong>
-      <a href="https://docs.google.com/spreadsheets/d/1PDtezoUgOdgpZCyLgOs6gUEGky82QwIlT3eXTF5gbY8/edit#gid=0" target="_blank"><strong class="bold-text-24">GoogleSheet-Foodie</strong></a><strong class="bold-text-24"><br>- NUMBER OF ARTEFACTS: 74<br>  - THE CLASSIFICATION CREATED: Code \Image \Name \Catagorise \Media \Style \Visual Item \Keywords \Year \Artist \Intro \Codice Aiap\Fund\Link</strong>
+      <a href="https://docs.google.com/spreadsheets/d/1PDtezoUgOdgpZCyLgOs6gUEGky82QwIlT3eXTF5gbY8/edit#gid=0" target="_blank"><strong class="bold-text-24">GoogleSheet-Foodie</strong></a><strong class="bold-text-24"><br>- NUMBER OF ARTEFACTS: 74<br>  - THE CLASSIFICATION CREATED: Code \Image \Name \Categorise \Media \Style \Visual Item \Keywords \Year \Artist \Intro \Codice Aiap\Fund\Link</strong>
     </div>
     <div class="text-block-16"><strong class="bold-text-25">RESOURCES<br><br>- </strong>
       <a href="https://aiap.it/centro-di-documentazione-sul-progetto-grafico/" target="_blank"><strong class="bold-text-25">Aiap.it-Link</strong></a><strong class="bold-text-25"><br>-</strong>
       <a href="http://- https://www.fondazioneragghianti.it" target="_blank"><strong class="bold-text-25"> fondazioneragghianti.it-Link</strong></a><strong class="bold-text-25"><br>- </strong>
-      <a href="documents/02-F-DP-FOLDER-DIEGO-PROSPERO-CDPG-AIAP1.pdf"><strong class="bold-text-25">02-F-DP-FOLDER-DIEGO-PROSPERO-CDPG-AIAP.pdf</strong></a><strong class="bold-text-25"><br>- </strong>
+      <a href="00"><strong class="bold-text-25">02-F-DP-FOLDER-DIEGO-PROSPERO-CDPG-AIAP</strong></a><strong class="bold-text-25"><br>- </strong>
       <a href="documents/aiapPolimiYearCount-1.pdf"><strong class="bold-text-25">Grouper data dump.pdf</strong></a>
     </div>
   </div>
