--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <div class="text-block-16"><strong class="bold-text-25">RESOURCES<br><br>- </strong>
       <a href="https://aiap.it/centro-di-documentazione-sul-progetto-grafico/" target="_blank"><strong class="bold-text-25">Aiap.it-Link</strong></a><strong class="bold-text-25"><br>-</strong>
       <a href="http://- https://www.fondazioneragghianti.it" target="_blank"><strong class="bold-text-25"> fondazioneragghianti.it-Link</strong></a><strong class="bold-text-25"><br>- </strong>
-      <a href="00"><strong class="bold-text-25">02-F-DP-FOLDER-DIEGO-PROSPERO-CDPG-AIAP</strong></a><strong class="bold-text-25"><br>- </strong>
+      <a href="https://isbnsearch.org/isbn/9788894069112"><strong class="bold-text-25">Silvio Coppola, Diego Prospero e il Ristorante El Prosper. Febbraio 2015</strong></a><strong class="bold-text-25"><br>- </strong>
       <a href="documents/aiapPolimiYearCount-1.pdf"><strong class="bold-text-25">Grouper data dump.pdf</strong></a>
     </div>
   </div>
